--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.8.4
+  shared_preferences: ^2.1.2
+  google_maps_flutter: ^2.3.1
+  max_country_picker: ^1.0.0+2
 
 dev_dependencies:
   flutter_test:
